<resources>
    <string name="app_name">Courses</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="desc3">Learning has become easier and more interesting! Reach new heights in knowledge with our application.</string>
    <string name="desc2">Here you will find exciting courses and test your knowledge with interactive tests.</string>
    <string name="desc1">This is an educational application with tests!</string>
    <string name="title1">Welcome!</string>
    <string name="test">test</string>
    <string name="start_training_now">Start training now</string>
    <string name="study_the">Study the course and take the test</string>
    <string name="basic_desc1">Market Research: Understanding the needs and desires of the target audience through market research and competitor analysis.\nTarget audience: Identification of specific market segments that are most promising for a product or service.\n4P marketing: Management of product, price, promotion and place of product distribution.\nSegmentation and positioning: Highlighting the unique characteristics of a product and creating a unique image in the eyes of consumers.\nOnline Marketing: Using online channels to promote a product such as websites, social media, email and content marketing.\nAnalytics and measurement: Evaluating the effectiveness of marketing campaigns using metrics and analytical tools.\nCommunication and Engagement: Establishing connections with clients through various communication channels and maintaining long-term relationships.\nAdapt and Improve: Continuously update and improve marketing strategies based on feedback and changes in the market.</string>
    <string name="basic_title1">Fundamentals of Social Media Marketing</string>
    <string name="basic_title2">Python Programming Basics</string>
    <string name="basic_title3">Web Magic: Creating Attractive and Interactive Websites</string>
    <string name="basic_desc2">Python is a high-level, interpreted programming language known for its simplicity and clean syntax. Dynamic typing is one of Python\'s key features, which means you don\'t have to declare variable data types explicitly. Python statements typically end with a newline character, enhancing code readability. Variables are declared with simple assignment, and their types are determined automatically at runtime. Python supports various data structures, including lists, tuples, sets, and dictionaries. Programs often start with a main() function, serving as the entry point. Conditional statements, such as if, elif, and else, enable decision-making in Python. Loops, such as for and while, facilitate repetitive actions. Python boasts an extensive standard library of modules with numerous functions and tools. It also supports object-oriented programming (OOP), making it a versatile and powerful language for application development.</string>
    <string name="basic_desc3">\"Web Magic\" refers to the art and science of crafting captivating and interactive websites. Building an attractive website starts with thoughtful design, including layout and color scheme. Visual elements like graphics, images, and multimedia enhance the website\'s appeal. Effective navigation ensures users can easily find information. Interactivity is achieved through features like forms, buttons, and dynamic content. Responsive design ensures the website looks good on all devices. SEO techniques improve the site\'s visibility in search results. Accessibility is important for all users, including those with disabilities. Web security is vital for protecting user data. Continuous testing and optimization keep the website current and user-friendly.</string>
    <string name="popular_course">Popular Course</string>
    <string name="course">Course</string>
    <string name="fundamentals_of_social_media_marketing">Fundamentals of Social Media Marketing</string>
    <string name="operator_for_commenting_lines_in_python">Operator for commenting lines in Python?</string>
    <string name="keyword_for_declaring_a_variable_in_python">Keyword for declaring a variable in Python?</string>
    <string name="function_for_displaying_text_on_the_screen_in_python">Function for displaying text on the screen in Python?</string>
    <string name="keyword_for_conditional_statements_in_python">Keyword for conditional statements in Python?</string>
    <string name="data_type_for_creating_a_list_in_python">Data type for creating a list in Python?</string>
    <string name="_rew">#</string>
    <string name="var1">var</string>
    <string name="print">print</string>
    <string name="if1">if</string>
    <string name="list">list</string>
    <string name="let">let</string>
    <string name="const1">const</string>
    <string name="fun1">fun</string>
    <string name="write">write</string>
    <string name="echo">echo</string>
    <string name="display">display</string>
    <string name="for1">for</string>
    <string name="while1">while</string>
    <string name="switch1">switch</string>
    <string name="array">array</string>
    <string name="tuple">tuple</string>
    <string name="set">set</string>
    <string name="what_is_kotlin">What is Kotlin?</string>
    <string name="how_to_declare_a_variable_in_kotlin">How to declare a variable in Kotlin?</string>
    <string name="how_to_create_a_function_in_kotlin">How to create a function in Kotlin?</string>
    <string name="what_is_null_safety_in_kotlin">What is Null Safety in Kotlin?</string>
    <string name="which_operator_is_used_for_conditional_operations_in_kotlin">Which operator is used for conditional operations in Kotlin?</string>
    <string name="programming_language">Programming language</string>
    <string name="val_or_var">val or var</string>
    <string name="null_safety_mechanism">Null safety mechanism</string>
    <string name="interpreter">Interpreter</string>
    <string name="compiler">Compiler</string>
    <string name="ide">IDE</string>
    <string name="function">function</string>
    <string name="def">def</string>
    <string name="procedure">procedure</string>
    <string name="a_mechanism_for_ensuring_safety_against_null_values">A mechanism for ensuring safety against null values</string>
    <string name="null_check_operator">Null check operator</string>
    <string name="exceptions">Exceptions</string>
    <string name="smart_pointers">Smart pointers</string>
    <string name="what_is_c">What is C++?</string>
    <string name="how_to_declare_a_variable_in_c">How to declare a variable in C++?</string>
    <string name="how_to_create_a_function_in_c">How to create a function in C++?</string>
    <string name="what_is_a_pointer_in_c">What is a pointer in C++?</string>
    <string name="which_operator_is_used_to_perform_looping_operations_in_c">Which operator is used to perform looping operations in C++?</string>
    <string name="variable_type_variable_name">Variable type variable name;</string>
    <string name="return_type_function_name">Return type function name() { }</string>
    <string name="a_variable_that">A variable that stores the address of another variable</string>
    <string name="void_functionname">void functionName() { }</string>
    <string name="pointer">Pointer</string>
    <string name="link">Link</string>
    <string name="kotlin">Kotlin</string>
    <string name="c">C++</string>
    <string name="python">Python</string>
</resources>